# vrt

./: .gitignore  LICENSE  poetry.toml  pyproject.toml  test.py
tests/: conftest.py  test_writer.py
tests/module/: test_module.py
vrt_writer/: __init__.py  constants.py  writer.py
vrt_writer/schemas/: gdalvrt.pickle  gdalvrt.xsd
